Update app link to external tracker URL

--- a/website/index.html
+++ b/website/index.html
@@ -40,7 +40,7 @@
 						App Store
 					</a>
 					<a
-						href="./app"
+						href="https://tracker.cernetic.cc"
 						class="bg-green-600 text-white hover:bg-green-700 px-6 py-3 rounded-lg flex items-center">
 						<svg
 							xmlns="http://www.w3.org/2000/svg"
